# stocks-price-and-headline

./: apple_historical_news.csv  database.py  main.py  pasted_text.txt  pyproject.toml  stocks.db
