[tool.poetry]
name = "repl-nix-aapl-historical-chart-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
plotly = "^5.24.0"
newsapi-python = "^0.2.7"
yfinance = "^0.2.43"
pandas = "^2.2.2"
newsapi = "^0.1.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
